Ajustando o menu e criando o footer

--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,1 +1,31 @@
-<p>rodape works!</p>
+<footer class="page-footer font-small bg-secondary pt-4">
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 d-flex justify-content-center">
+            <h4 class="text-white">Me acompanhe nas redes sociais</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 d-flex justify-content-center">
+            <ul class="social-network">
+                <li>
+                    <a href="https://github.com/eduardaea" target="_blank" class="icoGithub">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/eduarda-albuquerque/" target="_blank" class="icoLinkedin">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/stories/eduardac.albuquerque" target="_blank" class="icoInsta">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+</footer>
