--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,22 +5,22 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto d-flex  align-items-center">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
           <li class="nav-item">
             <img src="https://i.imgur.com/A3XVIEo.png" alt="Imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
           </li>
-          <li class="nav-item pl-3">
+          <li class="nav-item ps-3">
             <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário</p>
           </li>
           
-          <li class="nav-item pl-3">
+          <li class="nav-item ps-3">
             <a href="">
                 <p class="m-0"> <i class="fa fa-pencil-square-o text-white fs-16" aria-hidden="true"></i></p>
             </a>
           </li>
         </ul>
 
-        <ul class="navbar-nav ml-auto d-flex  align-items-center">
+        <ul class="navbar-nav mr-auto d-flex  align-items-center">
             <li class="nav-item pl-3">
              <a  class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a >
             </li>
