Implementação de Tela de Cadastro

--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -19,8 +19,13 @@ ul.social-network li{
         color: rgb(52, 52, 163);
 }
 .fa-instagram:hover{
-    color: linear-gradient(to bottom, #e72c83 0%, #a742c6 100%);
-    color:-webkit-linear-gradient(top, #e72c83 0%, #a742c6 100%);
+   
+        background: -webkit-radial-gradient(33% 100% circle, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+        background: radial-gradient(circle at 33% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+      
 }
 .fa-github:hover{
         color: rgb(39, 37, 37);
