--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -50,7 +50,7 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class=" btn  me-4 mt-4">Cancelar</button>
+                            <button type="submit" class=" btn  me-4 mt-4" routerLink="/login">Cancelar</button>
                             <button type="submit" class="btn  mt-4">Cadastrar</button>
                         </div>
                     </div>
