--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -9,9 +9,9 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10">
 
-                    <h1 class="text-center mt-4">Cadastro</h1>
+                    <h1 class="text-center mt-5 mb-0">Cadastro</h1>
 
-                    <div class="form-container">
+                    <div class="form-container form-teste ">
 
                         <div class="form-group">
                             <label for="nome">Nome</label>
@@ -54,7 +54,6 @@
                             <button type="submit" class="btn  mt-4">Cadastrar</button>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
