--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -30,3 +30,7 @@ ul.social-network li{
 .fa-github:hover{
         color: rgb(39, 37, 37);
 }
+.bg-color{
+        
+        background-color: black;
+}
