--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,75 @@
-#img-bg{
-    background-image: url("https://i.imgur.com/MxCpKcf.jpeg");
-    min-height: 695px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
+    :root{
+        --green-color: rgba(65, 161, 89, 0.774);;
+        --yellow-color: rgb(233,213,43);
+        --brown-color:rgb(114, 71, 71);
+        --font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serifS;
+    }
+
+    #img-bg{
+        background-image: url("https://i.pinimg.com/736x/3a/74/38/3a74388cc04b855f93a6a367d9b2e755.jpg");
+        min-height: 695px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .gradient{
+        background: rgb(226,146,28);
+        background: radial-gradient(circle, rgba(226,146,28,1) 0%, rgba(181,199,81,1) 67%, rgba(244,207,29,1) 100%);
+    }
+
+    .form{
+        width: auto;
+        border-radius: 10px;
+        background-color:rgba(255, 255, 255, 0.247);
+        
+    }
+             
+    .btn-grad {
+        background-image: linear-gradient(to right, #16A085 0%, #F4D03F  51%, #16A085  100%);
+        margin: 10px;
+        padding: 10px 30px;
+        text-align: center;
+        transition: 0.5s;
+        background-size: 200% auto;
+        color: white;            
+        box-shadow: 0 0 10px #eee;
+        border-radius: 10px;
+        border-color: #16a05470;
+        display: block;
+      }
+
+      .btn-grad:hover {
+        background-position: right center; /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+      }
+
+    h1{
+        font-family: var(--font-family);
+        color: var(--green-color)
+    }
+    .form-group{
+        font-family: var(--font-family);
+        color:var(--brown-color);
+     }
+
+    input{
+        background-color: #16a08442;    
+        color: #eee;
+    }
+
+    input::placeholder{
+        color: #fff3c275;
+        font-weight: 200;
+    }
+
+    label{
+        color: #16a08467;
+        font-weight: 600;
+    }
+
+    .text-center{
+        color: rgba(245, 245, 245, 0.863);
+    }
