--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid">
+<div class="container-fluid gradient">
     <div class="row d-flex align-items-center">
         <div class="col-md-6">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
+                <div class="col-md-6 form">
 
-                    <h1 class="text-center mb-3"> Entrar</h1>
+                    <h1 class="text-center mt-3"> Entrar</h1>
                     <div class="form-group">
                         <label for="usuario">Usuário</label>
                         <input class="form-control "type="text" name="usuario" id="usuario"
@@ -18,8 +18,8 @@
                         placeholder="Seu senha">
                     </div>
 
-                    <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success">Entrar</button>
+                    <div class="d-flex justify-content-center mt-4">
+                        <button type="submit" class="btn-grad">Entrar</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
