--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
 
         <ul class="navbar-nav mr-auto d-flex  align-items-center">
             <li class="nav-item pl-3">
-             <a  class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a >
+             <a  class="m-0 font-weight-bold text-white fs-16" routerLink="/login">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a >
             </li>
         </ul>
 
