--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -9,7 +9,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10">
 
-                    <h1 class="text-center mt-5 mb-0">Cadastro</h1>
+                    <h1 class="text-center mt-5 ">Cadastro</h1>
 
                     <div class="form-container form-teste ">
 
