--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -15,34 +15,34 @@
 
                         <div class="form-group">
                             <label for="nome">Nome</label>
-                            <input class="form-control " type="text" name="nome" id="nome" placeholder="Seu Nome">
+                            <input [(ngModel)]='user.nome' class="form-control " type="text" name="nome" id="nome" placeholder="Seu Nome">
                         </div>
 
                         <div class="form-group">
                             <label for="usuario">Usuário</label>
-                            <input class="form-control " type="text" name="usuario" id="usuario"
+                            <input [(ngModel)]='user.usuario' class="form-control " type="text" name="usuario" id="usuario"
                                 placeholder="Seu usuario">
                         </div>
 
                         <div class="form-group">
                             <label for="foto">Link da foto</label>
-                            <input class="form-control " type="text" name="foto" id="foto" placeholder="Link da Foto">
+                            <input [(ngModel)]="user.foto"  class="form-control " type="text" name="foto" id="foto" placeholder="Link da Foto">
                         </div>
 
                         <div class="form-group">
-                            <label for="senha">Senha</label>
-                            <input class="form-control " type="password" name="senha" id="senha" placeholder="Senha">
+                            <label  for="senha">Senha</label>
+                            <input [(ngModel)]='user.senha' class="form-control " type="password" name="senha" id="senha" placeholder="Senha">
                         </div>
 
                         <div class="form-group">
-                            <label for="confirmSenha"> Confirmar Senha</label>
-                            <input class="form-control " type="password" name="confirmSenha" id="confirmSenha"
+                            <label  for="confirmarSenha"> Confirmar Senha</label>
+                            <input (input)="confirmSenha($event)"  class="form-control" type="password" name="confirmSenha" id="confirmSenha"
                                 placeholder="Confirme senha">
                         </div>
 
                         <div class="form-group">
-                            <label for="confirmSenha"> Tipo de Usuário</label>
-                            <select class="form-control" name="tipo" id="tipo">
+                            <label for="tipoUser"> Tipo de Usuário</label>
+                            <select class="form-control" name="tipo" id="tipo" (change)="tipoUser($event)">
                                 <option>Selecione um tipo de usuário: </option>
                                 <option value="normal">Normal</option>
                                 <option value="adm">Administrador</option>
@@ -51,7 +51,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="submit" class=" btn  me-4 mt-4" routerLink="/login">Cancelar</button>
-                            <button type="submit" class="btn  mt-4">Cadastrar</button>
+                            <button type="submit" class="btn  mt-4" (click)="cadastrar()">Cadastrar</button>
                         </div>
                     </div>
                 </div>
