--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,19 +7,19 @@
                     <h1 class="text-center mt-3"> Entrar</h1>
                     <div class="form-group">
                         <label for="usuario">Usuário</label>
-                        <input class="form-control "type="text" name="usuario" id="usuario"
+                        <input  [(ngModel)]="userLogin.usuario" class="form-control "type="text" name="usuario" id="usuario"
                         placeholder="Seu usuário">
                     </div>
  
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control "type="password" name="senha" id="senha"
+                    <input [(ngModel)]="userLogin.senha" class="form-control "type="password" name="senha" id="senha"
                         placeholder="Seu senha">
                     </div>
 
                     <div class="d-flex justify-content-center mt-4">
-                        <button type="submit" class="btn-grad">Entrar</button>
+                        <button type="submit" class="btn-grad" (click)="entrar()">Entrar</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
