--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-menu *ngIf='auth.logado()'></app-menu>
+
 <router-outlet></router-outlet>
-<app-menu></app-menu>
-<app-rodape></app-rodape>
+
+<app-rodape *ngIf='auth.logado()'></app-rodape>
