--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,10 +1,11 @@
 .color{
   background-color:   rgb(10 177 43 / 51%);
 }
-.fs-54{
-    font-size: 54pt;
-}
-
-.fs-18{
-    font-size: 18pt;
+.but{
+  background-color: transparent;
+    border-width: 0px;
+    border-color:0ch;
+    border-image: initial;
+    text-decoration: underline;
+    color: blue;
 }
