--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -49,7 +49,7 @@
 </div>
 
  <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -69,7 +69,7 @@
             </div>
 
             <div class="form-group">
-                <label for="tema">Escolha seu tema ou <a href="">cadastre um novo</a>:</label>
+                <label for="tema">Escolha seu tema ou <button class="but" (click)="irTema()" data-bs-dismiss="modal"> cadastre um novo:</button></label>
                 <select class="form-control" name="tema" id="tema">
                     <option value="">Temas</option>
                 </select>
