--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -14,11 +14,11 @@
                 <div class="col-md-3">
 
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+                        <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-light">Cadastrar</button>
+                        <button class="btn btn-light mt-3 " (click)="cadastrar()">Cadastrar</button>
                     </div>
 
                 </div>
@@ -48,23 +48,17 @@
                     <th scope="col">Modificações</th>
                   </tr>
                 </thead>
+
                 <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
+                  <tr *ngFor='let temas of listaTemas'>
+                    <th>{{temas.id}}</th>
+                    <td>{{temas.descricao}}</td>
+                    
+                    <td class="d-flex justify-content-end">
+                        <button class="btn btn-info me-3">Editar</button>
+                        <button class="btn btn-danger">Apagar</button>
+                    </td>
+
                   </tr>
                 </tbody>
               </table>
