--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -55,8 +55,8 @@
                     <td>{{temas.descricao}}</td>
                     
                     <td class="d-flex justify-content-end">
-                        <button class="btn btn-info me-3">Editar</button>
-                        <button class="btn btn-danger">Apagar</button>
+                        <button class="btn btn-info me-3" [routerLink]="['/tema-edit',temas.id]">Editar</button>
+                        <button class="btn btn-danger" [routerLink]="['/tema-delete',temas.id]">Apagar</button>
                     </td>
 
                   </tr>
