Post e Get de Postagem

--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -9,3 +9,9 @@
     text-decoration: underline;
     color: blue;
 }
+
+.card-columns{
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 10px;
+}
