--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -35,15 +35,72 @@
         <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
 
           <button class="nav-link active font-weight-bold" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#feedPosts" type="button" role="tab" aria-controls="nav-feedPosts" aria-selected="true">Feed de Posts</button>
-          <button class="nav-link font-weight-bold" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#meusPosts" type="button" role="tab" aria-controls="nav-meusPosts" aria-selected="false">Meus Posts</button>
+          <button class="nav-link font-weight-bold" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#meusPosts" type="button" role="tab" aria-controls="nav-meusPosts" aria-selected="false" (click)=" findByIdUser()">Meus Posts</button>
           <button class="nav-link font-weight-bold" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#postsTema" type="button" role="tab" aria-controls="nav-postsTema" aria-selected="false">Posts por Tema</button>
         </div>
       </nav>
 
-      <div class="tab-content" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="feedPosts" role="tabpanel" aria-labelledby="nav-feedPosts-tab">Todas as Postagens</div>
-        <div class="tab-pane fade" id="meusPosts" role="tabpanel" aria-labelledby="nav-meusPosts-tab">Meus Posts</div>
-        <div class="tab-pane fade" id="postsTema" role="tabpanel" aria-labelledby="nav-postsTema-tab">Posts por Tema</div>
+      <div class="tab-content mt-5" id="nav-tabContent">
+
+        <div class="tab-pane fade show active" id="feedPosts" role="tabpanel" aria-labelledby="nav-feedPosts-tab">Todas as Postagens
+            
+          <div class="card-columns">
+            <div class="card text-center" *ngFor="let post of listaPosts">
+              <div class="card-body">
+                <h5 class="card-title">{{post.titulo}}</h5>
+                <small class="text-muted">Tema: {{post.tema.descricao}}</small>
+                <p class="card-text mt-3">{{post.texto}}</p>
+                <p class="card-text"><small class="text-muted">
+                  {{post.data | date: 'dd/MM/yyyy'}} às {{post.data | date: 'HH:mm'}}
+                </small></p>
+              
+                <p class="card-text"><small class="text-muted">
+                  by: {{post.user.nome}}
+                </small></p>
+              </div>
+            </div>
+          </div>
+
+      </div>
+
+        <div class="tab-pane fade" id="meusPosts" role="tabpanel" aria-labelledby="nav-meusPosts-tab">
+        
+          <div class="card-columns">
+            <div class="card text-center" *ngFor="let post of user.postagem">
+              <div class="card-body">
+                <h5 class="card-title">{{post.titulo}}</h5>
+                <small class="text-muted">Tema: {{post.tema.descricao}}</small>
+                <p class="card-text mt-3">{{post.texto}}</p>
+                <p class="card-text"><small class="text-muted">
+                  {{post.data | date: 'dd/MM/yyyy'}} às {{post.data | date: 'HH:mm'}}
+                </small></p>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <div class="tab-pane fade" id="postsTema" role="tabpanel" aria-labelledby="nav-postsTema-tab">
+
+        <div class="card-columns " *ngFor="let tema of listaTemas">
+          <div class="card text-center" *ngFor='let item of tema.postagem'>
+            <div class="card-body">
+              <h5 class="card-title">{{item.titulo}}</h5>
+              <p class="card-text mt-3">{{item.texto}}</p>
+              <p class="card-text"><small class="text-muted">
+                {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}
+              </small></p>
+              
+              <p class="card-text"><small class="text-muted">
+                by: {{item.user.nome}}
+              </small></p>
+
+            </div>
+          </div>
+        </div>
+
+  </div>
+        
       </div>
 
 </div>
@@ -60,25 +117,27 @@
             
             <div class="form-group">
                 <label for="titulo">Título</label>
-                <input type="text" class="form-control" id="titulo" placeholder="Digite o Titulo">
+                <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o Titulo">
             </div>
 
             <div class="form-group">
                 <label for="texto">Texto</label>
-               <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+               <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
             </div>
 
             <div class="form-group">
                 <label for="tema">Escolha seu tema ou <button class="but" (click)="irTema()" data-bs-dismiss="modal"> cadastre um novo:</button></label>
-                <select class="form-control" name="tema" id="tema">
-                    <option value="">Temas</option>
+                <select class="form-control" name="tema" id="tema"  [(ngModel)]='idTema' (change)="findByIdTema()">
+                    <option *ngFor='let item of listaTemas' value="{{item.id}}">
+                      {{item.descricao}}
+                    </option>
                 </select>
             </div>
 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-danger">Publicar</button>
+          <button type="button" class="btn btn-danger" (click)="publicar()" data-bs-dismiss="modal">Publicar</button>
         </div>
       </div>
     </div>
