--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -75,6 +75,9 @@
                   {{post.data | date: 'dd/MM/yyyy'}} às {{post.data | date: 'HH:mm'}}
                 </small></p>
 
+                <a [routerLink]="['/postagem-edit', post.id]" href="" class="text-info me-3">Editar</a>
+                <a [routerLink]="['/postagem-delete', post.id]" href="" class="text-danger">Apagar</a>
+                
               </div>
             </div>
           </div>
