--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
           </li>
           
           <li class="nav-item ps-3">
-            <a href="">
+            <a [routerLink]="['/user-edit', id]">
                 <p class="m-0"> <i class="fa fa-pencil-square-o text-white fs-16" aria-hidden="true"></i></p>
             </a>
           </li>
